k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskflow
  namespace: taskflow
spec:
  ingressClassName: traefik
  rules:
  - host: taskflow.164.152.240.143.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskflow
            port:
              number: 80
